--- a/index.html
+++ b/index.html
@@ -9,6 +9,31 @@
 </head>
 <body>
   <h1>Java Script Sandbox: Section 2</h1>
+ <!-- <label for="weather">Select the weather type today: </label>
+  <select id="weather">
+    <option value="">--Make a choice--</option>
+    <option value="sunny">Sunny</option>
+    <option value="rainy">Rainy</option>
+    <option value="snowing">Snowing</option>
+    <option value="overcast">Overcast</option>
+  </select>
+  
+  <p class="is--block">TESTZEILTE</p>
+-->
+  <label for="theme">Select theme: </label>
+<select id="theme">
+  <option value="white">White</option>
+  <option value="black">Black</option>
+</select>
+
+<h1>This is my website</h1>
+<p class="is--displaynone">Wird angezeigt wenn ausgewählt</p>
+<input id="textBox" type="text"></input>
+<div id="output"></div>
+<style>
+  .is--block{display:block}
+  .is--displaynone {display:none}
+</style>
   <script src="app.js"></script>
 </body>
 </html>
